<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/round_corner_20"
    android:backgroundTint="@color/primary_light"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="32sp"
        android:textColor="@color/dark"
        android:textAlignment="center"
        android:padding="20dp"/>
    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_corner_50"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_corner_50"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/incorrect_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_ep"
        android:textColor="#BA6363"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_right"
        android:backgroundTint="@color/primary_dark"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_left"
        android:backgroundTint="@color/primary_dark"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"/>


</LinearLayout>