<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/round_corner_20"
    android:backgroundTint="@color/primary_light"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="32sp"
        android:textColor="@color/dark"
        android:textAlignment="center"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/r_name_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_corner_50"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/r_email_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_corner_50"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/r_password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/round_corner_50"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/register_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_exists"
        android:textColor="#BA6363"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/r_register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_corner_50"
        android:backgroundTint="@color/primary_dark"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="24sp"/>



</LinearLayout>