<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/round_bottom"
        android:backgroundTint="@color/primary_dark"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/auass_full"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <ScrollView
        android:id="@+id/home_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_right"
                android:backgroundTint="@color/primary_light"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_marginVertical="30dp"
                android:text="@string/top_news"
                android:textColor="@color/dark"
                android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_news_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_right"
                android:backgroundTint="@color/primary_light"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_marginVertical="30dp"
                android:text="@string/recent"
                android:textColor="@color/dark"
                android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="40dp"
                android:text="@string/director_message"
                android:textColor="@color/text_primary"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>