<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark">

    <TextView
        android:id="@+id/enter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="18sp"
        android:text="@string/article_title_placeholder"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/article_title"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        android:background="@drawable/round_corner_50"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toEndOf="@+id/enter_title"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/upload_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:contentDescription="ImageButton"
        android:layout_marginTop="10dp"
        android:background="@drawable/img"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_title" />

    <EditText
        android:id="@+id/article_content"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_corner_20"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/article_text"
        android:inputType="textMultiLine"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_img" />

    <Button
        android:id="@+id/upload_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_50"
        android:backgroundTint="@color/primary_light"
        android:padding="20dp"
        android:text="@string/article_preview"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_content" />


    <TextView
        android:id="@+id/admin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="Pending Articles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/admin_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_title"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

